Restructure project directories and enable CORS

--- a/frontend/src/app/core/components/side-nav/side-nav.component.html
+++ b/frontend/src/app/core/components/side-nav/side-nav.component.html
@@ -5,9 +5,13 @@
         <mat-icon matListItemIcon>dashboard</mat-icon>
         <span matListItemTitle>Dashboard</span>
       </a>
-      <a mat-list-item routerLink="/expenses" routerLinkActive="active-link">
+      <a
+        mat-list-item
+        routerLink="/transactions"
+        routerLinkActive="active-link"
+      >
         <mat-icon matListItemIcon>attach_money</mat-icon>
-        <span matListItemTitle>Expenses</span>
+        <span matListItemTitle>Transactions</span>
       </a>
       <a mat-list-item routerLink="/reports">
         <mat-icon matListItemIcon>view_list</mat-icon>
