--- a/frontend/src/app/features/transactions/pages/transactions/transactions.component.html
+++ b/frontend/src/app/features/transactions/pages/transactions/transactions.component.html
@@ -1,13 +1,3 @@
 <h1>Transactions</h1>
 
-@defer {
-  @if (transactions$ | async; as transactions) { 
-    <ul>
-      @for (transaction of transactions; track transaction.amount) {
-        <li>{{ transaction.description }}</li>
-      } 
-    </ul>
-  }
-} @loading (minimum 0.5s) {
-  <p>Loading..</p>
-}
+<app-transaction-list></app-transaction-list>
