Add ability to update transactions, update transaction service

--- a/frontend/src/app/features/transactions/components/transaction-list-item/transaction-list-item.component.html
+++ b/frontend/src/app/features/transactions/components/transaction-list-item/transaction-list-item.component.html
@@ -1,4 +1,4 @@
-<div class="transaction-container">
+<div (click)="onClick()" class="transaction-container">
   <span class="date">{{ transaction.date | date}} </span>
   <div class="primary-row">
     <span>{{ transaction.title }}</span>
