--- a/frontend/src/app/features/transactions/components/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/features/transactions/components/transaction-list/transaction-list.component.html
@@ -1,5 +1,5 @@
 <div class="transaction-list">
-  @for (transaction of transactions$ | async; track transaction.id) {
+  @for (transaction of transactions; track transaction.id) {
     <app-transaction-list-item 
       (clicked)="onTransactionSelected(transaction)" 
       [transaction]="transaction"
@@ -9,6 +9,6 @@
 <app-transaction-form 
   *ngIf="selectedTransaction"
   [transaction]="selectedTransaction"
-  (transactionUpdated)="handleTransactionUpdated()"
+  (transactionUpdated)="handleTransactionUpdated($event)"
   (closed)="onFormClosed()">
 </app-transaction-form>
