--- a/frontend/src/app/features/transactions/components/transaction-form/transaction-form.component.css
+++ b/frontend/src/app/features/transactions/components/transaction-form/transaction-form.component.css
@@ -1,9 +1,43 @@
-.transaction-form {
+.form-container {
   position: absolute;
   top: 60px;
   bottom: 0;
   left: 0;
   right: 0;
+  padding: 3rem;
 
-  background-color: white;
+  background-color: whitesmoke;
+  display: flex;
+  justify-content: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  min-width: 300px;
+  max-width: 500px;
+}
+
+.form-row {
+  display: flex;
+  flex-direction: column;
+}
+
+#title {
+  font-size: 1.2rem;
+}
+
+label {
+  color: rgb(100,100,100);
+}
+
+textarea {
+  resize: vertical;
+}
+
+.form-actions {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
